--- a/views/dashboard.ejs
+++ b/views/dashboard.ejs
@@ -2,9 +2,9 @@
 
 <div id='dashimg' style="position: relative; top: 15%;">
     <div style="padding: 2%" >
-          <h1 style='font-size: 4rem'>Create Forms effortlessly</h1>
+          <h1 id="dashhd">Create Forms effortlessly</h1>
           <br>
-          <p style="font-size: 2rem">You are just one click away from creating your own form.</p>
+          <p id="dashcnt" >You are just one click away from creating your own form.</p>
     </div>
 </div>
 
