--- a/views/form.ejs
+++ b/views/form.ejs
@@ -1,6 +1,6 @@
 <% include ./partials/headernav.ejs %>
 
-<div id='formbx' style='width: 50%; margin: 2% auto; border: 3px solid black ; padding: 5%; border-radius: 10px; background-color: #e3f2fd;'>
+<div id='formbx'>
     <input type="text" style='border: 2px solid #46accf; border-radius: 10px; margin:1% 0%;' id='titlein' placeholder='Title'><br>
     <input type="text" style='border: 2px solid #46accf; border-radius: 10px;' id='descriptionin' placeholder='Description'>
     <div id='formcontent' style="margin: 1.5%; color:#46accf ">
