--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -1,5 +1,6 @@
 <html>
     <head>
+        <meta content="width=device-width, initial-scale=1" name="viewport" />
         <title><%= title %></title>
         <link rel="stylesheet" href="/style.css">
         <script src="https://kit.fontawesome.com/9303a866dd.js"></script>
