--- a/views/Signuppg.ejs
+++ b/views/Signuppg.ejs
@@ -3,14 +3,13 @@
 <div class="d-flex flex-row justify-content-center align-items-center border border-dark positionbx">
 </div>
 <div id='signuppg' class='d-flex flex-column justify-content-around pl-3'>
-    <h1>SIGN UP</h1>
-    <hr>
+    <h1 id='suhead'>SIGN UP</h1>
     <form action="/signup" method='POST' class="d-flex flex-column ">
 <label for="emailuser">Email ID</label>
 <input type="email" id="emailuser" placeholder="Email ID" name="email">
 <label id="passworduser">Password</label>
 <input type="password" id="passworduser" placeholder="Password" name="password">
-<button id='submitbtnsiup' class=" btn btn-danger mt-3" >SUBMIT</button>
+<button id='submitbtnsiup' class=" btn btn-danger mt-3" >Go</button>
 <a href="/login" class="mt-2">Already a member-Login</a>
     </form>
 </div>
