--- a/views/partials/headernav.ejs
+++ b/views/partials/headernav.ejs
@@ -1,11 +1,12 @@
 <html>
     <head>
+        <meta content="width=device-width, initial-scale=1" name="viewport" />
         <title><%= title %></title>
         <link rel="stylesheet" href="/style.css">
         <script src="https://kit.fontawesome.com/9303a866dd.js"></script>
         <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
     </head>
-    <body style="background-image: url('https://images.unsplash.com/photo-1465101162946-4377e57745c3?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1357&q=80');background-size: cover;" > 
+    <body style="background-image: url('https://images.unsplash.com/photo-1465101162946-4377e57745c3?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1357&q=80');background-size: cover; background-repeat: none" > 
     <nav class="d-flex flex-row" style="background-color: #e3f2fd;">
          <h4 class="m-4"style='color: #46accf' >FORM-MANAGER</h4>    
          <a class='m-4' href="/form">Create Form</a>
